# qa_guru_lesson_17_REST_API

./: .gitignore  README.md  pyproject.toml
resources/: post_users.json
tests/: test_reqres.py  test_ui.py
